Add import data integrity check; add entity counts in confirmation dialog